@@ -26,6 +26,7 @@ my %Cbs =
      sysfunc	=> {which=>'Parser', args => [text=>'string']},
      #
      contassign => {which=>'SigParser', args => [kwd=>'string', lhs=>'string', rhs=>'string']},
+     defparam   => {which=>'SigParser', args => [kwd=>'string', lhs=>'string', rhs=>'string']},
      endcell	=> {which=>'SigParser', args => [kwd=>'string']},
      endinterface=>{which=>'SigParser', args => [kwd=>'string']},
      endmodport => {which=>'SigParser', args => [kwd=>'string']},
