@@ -148,157 +148,168 @@ verilog/v_hier_sub.v:010: OPERATOR ';'
 verilog/v_hier_sub.v:012: unreadback '
 
    '
-verilog/v_hier_sub.v:012: KEYWORD 'supply1'
-verilog/v_hier_sub.v:012: unreadback ' 	'
-verilog/v_hier_sub.v:012: SYMBOL 'a1'
+verilog/v_hier_sub.v:012: KEYWORD 'parameter'
+verilog/v_hier_sub.v:012: unreadback ' '
+verilog/v_hier_sub.v:012: SYMBOL 'FROM_DEFPARAM'
+verilog/v_hier_sub.v:012: unreadback ' '
+verilog/v_hier_sub.v:012: OPERATOR '='
+verilog/v_hier_sub.v:012: unreadback ' '
+verilog/v_hier_sub.v:012: NUMBER '1'
 verilog/v_hier_sub.v:012: OPERATOR ';'
 verilog/v_hier_sub.v:014: unreadback '
 
    '
-verilog/v_hier_sub.v:014: SYMBOL 'v_hier_subsub'
-verilog/v_hier_sub.v:014: unreadback ' '
-verilog/v_hier_sub.v:014: OPERATOR '#'
-verilog/v_hier_sub.v:014: OPERATOR '('
-verilog/v_hier_sub.v:015: unreadback '
-		   '
-verilog/v_hier_sub.v:015: OPERATOR '.'
-verilog/v_hier_sub.v:015: SYMBOL 'IGNORED'
-verilog/v_hier_sub.v:015: OPERATOR '('
-verilog/v_hier_sub.v:015: NUMBER ''sh20'
-verilog/v_hier_sub.v:015: OPERATOR ')'
+verilog/v_hier_sub.v:014: KEYWORD 'supply1'
+verilog/v_hier_sub.v:014: unreadback ' 	'
+verilog/v_hier_sub.v:014: SYMBOL 'a1'
+verilog/v_hier_sub.v:014: OPERATOR ';'
 verilog/v_hier_sub.v:016: unreadback '
-		   '
-verilog/v_hier_sub.v:016: OPERATOR ')'
+
+   '
+verilog/v_hier_sub.v:016: SYMBOL 'v_hier_subsub'
+verilog/v_hier_sub.v:016: unreadback ' '
+verilog/v_hier_sub.v:016: OPERATOR '#'
+verilog/v_hier_sub.v:016: OPERATOR '('
 verilog/v_hier_sub.v:017: unreadback '
-     '
-verilog/v_hier_sub.v:017: SYMBOL 'subsub0'
-verilog/v_hier_sub.v:017: unreadback ' '
+		   '
+verilog/v_hier_sub.v:017: OPERATOR '.'
+verilog/v_hier_sub.v:017: SYMBOL 'IGNORED'
 verilog/v_hier_sub.v:017: OPERATOR '('
+verilog/v_hier_sub.v:017: NUMBER ''sh20'
+verilog/v_hier_sub.v:017: OPERATOR ')'
+verilog/v_hier_sub.v:018: unreadback '
+		   '
+verilog/v_hier_sub.v:018: OPERATOR ')'
 verilog/v_hier_sub.v:019: unreadback '
-	      
-	      '
-verilog/v_hier_sub.v:019: OPERATOR '.'
-verilog/v_hier_sub.v:019: SYMBOL 'q'
-verilog/v_hier_sub.v:019: unreadback '		'
+     '
+verilog/v_hier_sub.v:019: SYMBOL 'subsub0'
+verilog/v_hier_sub.v:019: unreadback ' '
 verilog/v_hier_sub.v:019: OPERATOR '('
-verilog/v_hier_sub.v:019: SYMBOL 'qvec'
-verilog/v_hier_sub.v:019: OPERATOR '['
-verilog/v_hier_sub.v:019: NUMBER '0'
-verilog/v_hier_sub.v:019: OPERATOR ']'
-verilog/v_hier_sub.v:019: OPERATOR ')'
-verilog/v_hier_sub.v:019: OPERATOR ','
 verilog/v_hier_sub.v:021: unreadback '
 	      
 	      '
 verilog/v_hier_sub.v:021: OPERATOR '.'
-verilog/v_hier_sub.v:021: SYMBOL 'a'
+verilog/v_hier_sub.v:021: SYMBOL 'q'
 verilog/v_hier_sub.v:021: unreadback '		'
 verilog/v_hier_sub.v:021: OPERATOR '('
-verilog/v_hier_sub.v:021: SYMBOL 'a1'
+verilog/v_hier_sub.v:021: SYMBOL 'qvec'
+verilog/v_hier_sub.v:021: OPERATOR '['
+verilog/v_hier_sub.v:021: NUMBER '0'
+verilog/v_hier_sub.v:021: OPERATOR ']'
 verilog/v_hier_sub.v:021: OPERATOR ')'
-verilog/v_hier_sub.v:021: OPERATOR ')'
-verilog/v_hier_sub.v:021: OPERATOR ';'
-verilog/v_hier_sub.v:024: unreadback '  
+verilog/v_hier_sub.v:021: OPERATOR ','
+verilog/v_hier_sub.v:023: unreadback '
+	      
+	      '
+verilog/v_hier_sub.v:023: OPERATOR '.'
+verilog/v_hier_sub.v:023: SYMBOL 'a'
+verilog/v_hier_sub.v:023: unreadback '		'
+verilog/v_hier_sub.v:023: OPERATOR '('
+verilog/v_hier_sub.v:023: SYMBOL 'a1'
+verilog/v_hier_sub.v:023: OPERATOR ')'
+verilog/v_hier_sub.v:023: OPERATOR ')'
+verilog/v_hier_sub.v:023: OPERATOR ';'
+verilog/v_hier_sub.v:026: unreadback '  
 
 
    '
-verilog/v_hier_sub.v:024: KEYWORD 'generate'
-verilog/v_hier_sub.v:025: unreadback '
+verilog/v_hier_sub.v:026: KEYWORD 'generate'
+verilog/v_hier_sub.v:027: unreadback '
       '
-verilog/v_hier_sub.v:025: KEYWORD 'genvar'
-verilog/v_hier_sub.v:025: unreadback ' 	'
-verilog/v_hier_sub.v:025: SYMBOL 'K'
-verilog/v_hier_sub.v:025: OPERATOR ','
-verilog/v_hier_sub.v:025: unreadback ' '
-verilog/v_hier_sub.v:025: SYMBOL 'K_UNUSED'
-verilog/v_hier_sub.v:025: OPERATOR ';'
-verilog/v_hier_sub.v:026: unreadback '
-      '
-verilog/v_hier_sub.v:026: KEYWORD 'for'
-verilog/v_hier_sub.v:026: unreadback ' '
-verilog/v_hier_sub.v:026: OPERATOR '('
-verilog/v_hier_sub.v:026: SYMBOL 'K'
-verilog/v_hier_sub.v:026: OPERATOR '='
-verilog/v_hier_sub.v:026: NUMBER '0'
-verilog/v_hier_sub.v:026: OPERATOR ';'
-verilog/v_hier_sub.v:026: unreadback ' '
-verilog/v_hier_sub.v:026: SYMBOL 'K'
-verilog/v_hier_sub.v:026: OPERATOR '<'
-verilog/v_hier_sub.v:026: NUMBER '1'
-verilog/v_hier_sub.v:026: OPERATOR ';'
-verilog/v_hier_sub.v:026: unreadback ' '
-verilog/v_hier_sub.v:026: SYMBOL 'K'
-verilog/v_hier_sub.v:026: OPERATOR '='
-verilog/v_hier_sub.v:026: SYMBOL 'K'
-verilog/v_hier_sub.v:026: OPERATOR '+'
-verilog/v_hier_sub.v:026: NUMBER '1'
-verilog/v_hier_sub.v:026: OPERATOR ')'
-verilog/v_hier_sub.v:026: unreadback ' '
-verilog/v_hier_sub.v:026: KEYWORD 'begin'
-verilog/v_hier_sub.v:026: unreadback ' '
-verilog/v_hier_sub.v:026: OPERATOR ':'
-verilog/v_hier_sub.v:026: unreadback ' '
-verilog/v_hier_sub.v:026: SYMBOL 'genloop'
+verilog/v_hier_sub.v:027: KEYWORD 'genvar'
+verilog/v_hier_sub.v:027: unreadback ' 	'
+verilog/v_hier_sub.v:027: SYMBOL 'K'
+verilog/v_hier_sub.v:027: OPERATOR ','
+verilog/v_hier_sub.v:027: unreadback ' '
+verilog/v_hier_sub.v:027: SYMBOL 'K_UNUSED'
+verilog/v_hier_sub.v:027: OPERATOR ';'
 verilog/v_hier_sub.v:028: unreadback '
-	 
-	 '
-verilog/v_hier_sub.v:028: SYMBOL 'v_hier_subsub'
-verilog/v_hier_sub.v:028: unreadback ' '
-verilog/v_hier_sub.v:028: SYMBOL 'subsub2'
+      '
+verilog/v_hier_sub.v:028: KEYWORD 'for'
 verilog/v_hier_sub.v:028: unreadback ' '
 verilog/v_hier_sub.v:028: OPERATOR '('
-verilog/v_hier_sub.v:028: SYMBOL 'qvec'
-verilog/v_hier_sub.v:028: OPERATOR '['
-verilog/v_hier_sub.v:028: NUMBER '2'
-verilog/v_hier_sub.v:028: OPERATOR ']'
-verilog/v_hier_sub.v:028: OPERATOR ','
-verilog/v_hier_sub.v:028: unreadback ' '
-verilog/v_hier_sub.v:028: NUMBER '1'b0'
-verilog/v_hier_sub.v:028: OPERATOR ')'
+verilog/v_hier_sub.v:028: SYMBOL 'K'
+verilog/v_hier_sub.v:028: OPERATOR '='
+verilog/v_hier_sub.v:028: NUMBER '0'
 verilog/v_hier_sub.v:028: OPERATOR ';'
-verilog/v_hier_sub.v:029: unreadback '
-      '
-verilog/v_hier_sub.v:029: KEYWORD 'end'
+verilog/v_hier_sub.v:028: unreadback ' '
+verilog/v_hier_sub.v:028: SYMBOL 'K'
+verilog/v_hier_sub.v:028: OPERATOR '<'
+verilog/v_hier_sub.v:028: NUMBER '1'
+verilog/v_hier_sub.v:028: OPERATOR ';'
+verilog/v_hier_sub.v:028: unreadback ' '
+verilog/v_hier_sub.v:028: SYMBOL 'K'
+verilog/v_hier_sub.v:028: OPERATOR '='
+verilog/v_hier_sub.v:028: SYMBOL 'K'
+verilog/v_hier_sub.v:028: OPERATOR '+'
+verilog/v_hier_sub.v:028: NUMBER '1'
+verilog/v_hier_sub.v:028: OPERATOR ')'
+verilog/v_hier_sub.v:028: unreadback ' '
+verilog/v_hier_sub.v:028: KEYWORD 'begin'
+verilog/v_hier_sub.v:028: unreadback ' '
+verilog/v_hier_sub.v:028: OPERATOR ':'
+verilog/v_hier_sub.v:028: unreadback ' '
+verilog/v_hier_sub.v:028: SYMBOL 'genloop'
 verilog/v_hier_sub.v:030: unreadback '
-   '
-verilog/v_hier_sub.v:030: KEYWORD 'endgenerate'
+	 
+	 '
+verilog/v_hier_sub.v:030: SYMBOL 'v_hier_subsub'
+verilog/v_hier_sub.v:030: unreadback ' '
+verilog/v_hier_sub.v:030: SYMBOL 'subsub2'
+verilog/v_hier_sub.v:030: unreadback ' '
+verilog/v_hier_sub.v:030: OPERATOR '('
+verilog/v_hier_sub.v:030: SYMBOL 'qvec'
+verilog/v_hier_sub.v:030: OPERATOR '['
+verilog/v_hier_sub.v:030: NUMBER '2'
+verilog/v_hier_sub.v:030: OPERATOR ']'
+verilog/v_hier_sub.v:030: OPERATOR ','
+verilog/v_hier_sub.v:030: unreadback ' '
+verilog/v_hier_sub.v:030: NUMBER '1'b0'
+verilog/v_hier_sub.v:030: OPERATOR ')'
+verilog/v_hier_sub.v:030: OPERATOR ';'
+verilog/v_hier_sub.v:031: unreadback '
+      '
+verilog/v_hier_sub.v:031: KEYWORD 'end'
 verilog/v_hier_sub.v:032: unreadback '
+   '
+verilog/v_hier_sub.v:032: KEYWORD 'endgenerate'
+verilog/v_hier_sub.v:034: unreadback '
 
    '
-verilog/v_hier_sub.v:032: KEYWORD 'function'
-verilog/v_hier_sub.v:032: unreadback ' '
-verilog/v_hier_sub.v:032: SYMBOL 'foo'
-verilog/v_hier_sub.v:032: OPERATOR ';'
-verilog/v_hier_sub.v:033: unreadback '
-      '
-verilog/v_hier_sub.v:033: ATTRIBUTE '(* attribute *)'
+verilog/v_hier_sub.v:034: KEYWORD 'function'
+verilog/v_hier_sub.v:034: unreadback ' '
+verilog/v_hier_sub.v:034: SYMBOL 'foo'
+verilog/v_hier_sub.v:034: OPERATOR ';'
 verilog/v_hier_sub.v:035: unreadback '
+      '
+verilog/v_hier_sub.v:035: ATTRIBUTE '(* attribute *)'
+verilog/v_hier_sub.v:037: unreadback '
       
       '
-verilog/v_hier_sub.v:035: KEYWORD 'input'
-verilog/v_hier_sub.v:035: unreadback ' '
-verilog/v_hier_sub.v:035: SYMBOL 'not_part_of_pinlist'
-verilog/v_hier_sub.v:035: OPERATOR ';'
-verilog/v_hier_sub.v:036: unreadback '
+verilog/v_hier_sub.v:037: KEYWORD 'input'
+verilog/v_hier_sub.v:037: unreadback ' '
+verilog/v_hier_sub.v:037: SYMBOL 'not_part_of_pinlist'
+verilog/v_hier_sub.v:037: OPERATOR ';'
+verilog/v_hier_sub.v:038: unreadback '
       '
-verilog/v_hier_sub.v:036: SYMBOL 'foo'
-verilog/v_hier_sub.v:036: unreadback ' '
-verilog/v_hier_sub.v:036: OPERATOR '='
-verilog/v_hier_sub.v:036: unreadback ' '
-verilog/v_hier_sub.v:036: SYMBOL 'not_part_of_pinlist'
-verilog/v_hier_sub.v:036: OPERATOR ';'
-verilog/v_hier_sub.v:037: unreadback '
-   '
-verilog/v_hier_sub.v:037: KEYWORD 'endfunction'
+verilog/v_hier_sub.v:038: SYMBOL 'foo'
+verilog/v_hier_sub.v:038: unreadback ' '
+verilog/v_hier_sub.v:038: OPERATOR '='
+verilog/v_hier_sub.v:038: unreadback ' '
+verilog/v_hier_sub.v:038: SYMBOL 'not_part_of_pinlist'
+verilog/v_hier_sub.v:038: OPERATOR ';'
 verilog/v_hier_sub.v:039: unreadback '
+   '
+verilog/v_hier_sub.v:039: KEYWORD 'endfunction'
+verilog/v_hier_sub.v:041: unreadback '
 
 '
-verilog/v_hier_sub.v:039: KEYWORD 'endmodule'
-verilog/v_hier_sub.v:040: unreadback '
+verilog/v_hier_sub.v:041: KEYWORD 'endmodule'
+verilog/v_hier_sub.v:042: unreadback '
 '
-verilog/v_hier_sub.v:040: PREPROC '`line 40 "verilog/v_hier_sub.v" 2
+verilog/v_hier_sub.v:042: PREPROC '`line 42 "verilog/v_hier_sub.v" 2
 '
-verilog/v_hier_sub.v:040: ENDPARSE ''
+verilog/v_hier_sub.v:042: ENDPARSE ''
 verilog/example.v:001: PREPROC '`line 1 "verilog/example.v" 1
 '
 verilog/example.v:005: unreadback '
