@@ -16,25 +16,26 @@ verilog/v_hier_sub.v:008: VAR  'port' 'avec' 'module' '' '[3:0]' '' ''
 verilog/v_hier_sub.v:008: PORT  'avec' 'module' 'input' '[3:0]' '' '2'
 verilog/v_hier_sub.v:009: VAR  'port' 'qvec' 'module' '' '[3:0]' '' ''
 verilog/v_hier_sub.v:009: PORT  'qvec' 'module' 'output' '[3:0]' '' '3'
-verilog/v_hier_sub.v:012: VAR  'net' 'a1' 'module' 'supply1' '' '' ''
-verilog/v_hier_sub.v:017: INSTANT  'v_hier_subsub' 'subsub0' ''
-verilog/v_hier_sub.v:015: PARAMPIN  'IGNORED' ''sh20' '1'
-verilog/v_hier_sub.v:019: PIN  'q' 'qvec[0]' '1'
-verilog/v_hier_sub.v:021: PIN  'a' 'a1' '2'
-verilog/v_hier_sub.v:021: ENDCELL  ''
-verilog/v_hier_sub.v:025: VAR  'genvar' 'K' 'module' '' '' '' ''
-verilog/v_hier_sub.v:025: VAR  'genvar' 'K_UNUSED' 'module' '' '' '' ''
-verilog/v_hier_sub.v:028: INSTANT  'v_hier_subsub' 'subsub2' ''
-verilog/v_hier_sub.v:028: PIN  '' 'qvec[2]' '1'
-verilog/v_hier_sub.v:028: PIN  '' '1'b0' '2'
-verilog/v_hier_sub.v:028: ENDCELL  ''
-verilog/v_hier_sub.v:032: FUNCTION  'function' 'foo' ''
-verilog/v_hier_sub.v:033: ATTRIBUTE  '(* attribute *)'
-verilog/v_hier_sub.v:034: ATTRIBUTE  'synopsys metacommenttest'
-verilog/v_hier_sub.v:035: VAR  'port' 'not_part_of_pinlist' 'function' '' '' '' ''
-verilog/v_hier_sub.v:035: PORT  'not_part_of_pinlist' 'function' 'input' '' '' '0'
-verilog/v_hier_sub.v:037: ENDTASKFUNC  'endfunction'
-verilog/v_hier_sub.v:039: ENDMODULE  'endmodule'
+verilog/v_hier_sub.v:012: VAR  'parameter' 'FROM_DEFPARAM' 'module' '' '' '' '1'
+verilog/v_hier_sub.v:014: VAR  'net' 'a1' 'module' 'supply1' '' '' ''
+verilog/v_hier_sub.v:019: INSTANT  'v_hier_subsub' 'subsub0' ''
+verilog/v_hier_sub.v:017: PARAMPIN  'IGNORED' ''sh20' '1'
+verilog/v_hier_sub.v:021: PIN  'q' 'qvec[0]' '1'
+verilog/v_hier_sub.v:023: PIN  'a' 'a1' '2'
+verilog/v_hier_sub.v:023: ENDCELL  ''
+verilog/v_hier_sub.v:027: VAR  'genvar' 'K' 'module' '' '' '' ''
+verilog/v_hier_sub.v:027: VAR  'genvar' 'K_UNUSED' 'module' '' '' '' ''
+verilog/v_hier_sub.v:030: INSTANT  'v_hier_subsub' 'subsub2' ''
+verilog/v_hier_sub.v:030: PIN  '' 'qvec[2]' '1'
+verilog/v_hier_sub.v:030: PIN  '' '1'b0' '2'
+verilog/v_hier_sub.v:030: ENDCELL  ''
+verilog/v_hier_sub.v:034: FUNCTION  'function' 'foo' ''
+verilog/v_hier_sub.v:035: ATTRIBUTE  '(* attribute *)'
+verilog/v_hier_sub.v:036: ATTRIBUTE  'synopsys metacommenttest'
+verilog/v_hier_sub.v:037: VAR  'port' 'not_part_of_pinlist' 'function' '' '' '' ''
+verilog/v_hier_sub.v:037: PORT  'not_part_of_pinlist' 'function' 'input' '' '' '0'
+verilog/v_hier_sub.v:039: ENDTASKFUNC  'endfunction'
+verilog/v_hier_sub.v:041: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:005: MODULE  'module' 'bug26141' undef '0'
 verilog/parser_bugs.v:006: VAR  'net' 'b' 'module' 'wire' '[0:3]' '' ''
 verilog/parser_bugs.v:007: VAR  'net' 'a' 'module' 'wire' '' '' 'b[2]'
@@ -170,6 +171,7 @@ verilog/parser_bugs.v:149: ENDCELL  ''
 verilog/parser_bugs.v:150: INSTANT  'pulldown' 'pullinst' ''
 verilog/parser_bugs.v:150: PIN  '' 'r' '1'
 verilog/parser_bugs.v:150: ENDCELL  ''
+verilog/parser_bugs.v:152: DEFPARAM  'defparam' 'x.y.z.PAR' '1'
 verilog/parser_bugs.v:154: INSTANT  'cdrv' 'clk' ''
 verilog/parser_bugs.v:154: PIN  '' 'clk' '1'
 verilog/parser_bugs.v:154: ENDCELL  ''
